--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body {
     padding: 0;
 }
 
+/* header */
+
 header {
     background-image: url(../img/pattern.png);
     height: 150px;
@@ -14,6 +16,8 @@ header {
     margin-top: 70px;
     padding-left: 10px;
 }
+
+/* main-article */
 
 article {
     padding-left: 10px;
@@ -67,6 +71,8 @@ td {
 table {
     border-collapse: collapse;
 }
+
+/* footer */
 
 footer {
     margin-left: 10px;
