--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 /* header */
 
 header {
-    background-image: url(../img/pattern.png);
+    background-image: url('../img/pattern.png');
     height: 150px;
     background-color: rgb(18, 173, 173);
 }
